--- a/kflow_front/src/app/components/sign-up/sign-up.component.html
+++ b/kflow_front/src/app/components/sign-up/sign-up.component.html
@@ -6,19 +6,19 @@
     <mat-form-field appearance="outline">
       <mat-label>Nom d'utilisateur</mat-label>
       <input matInput formControlName="name">
-      <mat-error [appInsertError2]="userFormGroup.controls.name"></mat-error>
+      <mat-error [appInsertError]="userFormGroup.controls.name"></mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input matInput formControlName="email">
-      <mat-error [appInsertError2]="userFormGroup.controls.email"></mat-error>
+      <mat-error [appInsertError]="userFormGroup.controls.email"></mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Mot de passe</mat-label>
       <input matInput formControlName="password" type="password">
-      <mat-error [appInsertError2]="userFormGroup.controls.password"></mat-error>
+      <mat-error [appInsertError]="userFormGroup.controls.password"></mat-error>
     </mat-form-field>
 
   </form>
